Fix: TTF-1174, TTF-1192 line hieght clipping things
https://digitaltools.phe.org.uk/browse/TTF-1174
https://digitaltools.phe.org.uk/browse/TTF-1192

--- a/app/shared/components/List/style.scss
+++ b/app/shared/components/List/style.scss
@@ -152,7 +152,6 @@ $offset: 3.5rem;
       max-width: 42rem;
       margin-top: $offset;
       padding-bottom: .1em;
-      padding-top: .1em;
 
       span {
         bottom: 0;
